k8s/apps/games/mc-router/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-router
  labels:
    app.kubernetes.io/name: mc-router
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mc-router
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mc-router-api
  labels:
    app.kubernetes.io/name: mc-router
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mc-router
  ports:
    - name: api
      port: 8080
      targetPort: api
      protocol: TCP
